@@ -1,3 +1,11 @@
+2010-12-14  Reinhard Max  <max@suse.de>
+
+	* win/tclWinSock.c (CreateSocket):         Swap the loops over
+	* unix/tclUnixSock.c (CreateClientSocket): local and remote
+	addresses, so that the system's address preference for the remote
+	side decides which family gets tried first. Cleanup and clarify
+	some of the comments.
+
 2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tcl.h:    [Bug 3135271] Link error due to hidden
